fix margin top on nav btn; wtf form font size

--- a/less/bb-forms.less
+++ b/less/bb-forms.less
@@ -110,7 +110,7 @@ textarea {
 /* Checked state */
 .control input:checked ~ .control-indicator {
   color: #fff;
-  background-color: darken(@bb-btn-default-grey, 15%);
+  background-color: darken(@bb-btn-default-grey, 15%)!important;
 }
 
 .control:hover {
