--- a/less/bb-ui.less
+++ b/less/bb-ui.less
@@ -146,7 +146,7 @@ Version: 2.10 Dec2014
     }
 
     .input-xs {
-        font-size: @bb-font-size-small;
+        font-size: @bb-font-size-small!important;
         padding:2px 6px 1px 6px;
         height:20px;
     }
@@ -366,6 +366,7 @@ Version: 2.10 Dec2014
             border-color:transparent;
             color:@bb5-txt-clr;
             font-size: @bb-font-size-default;
+            margin: 0;
             &:hover, &:focus {
                 color: @bb-nav-prim-btn-hover-clr;
                 background-color: @bb-nav-prim-btn-hover-bg;
